# CrowTodoApp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  todoappdemo.db
include/: application.h  controller.h  database.h  db_constants.h  model.h
src/: application.cpp  controller.cpp  database.cpp  model.cpp
